# brdf-loader

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  brdf.h  powitacq.h  powitacq.inl  powitacq_rgb.h  powitacq_rgb.inl  setup.py
mitsuba/: measured.cpp  powitacq_rgb.cpp
python/: brdf_loader_ext.cpp  visualize.py
python/brdf_loader/: __init__.py
src/: tensor.h
test/: CMakeLists.txt  hello  hello.cpp  hello_rgb.cpp  test_brdf_loader.py
